# 33.1-PJ-04

./: README.md  conftest.py  constants.py  pyproject.toml  requirements.txt
pages/: authorization_by_code_page.py  authorization_page.py  base.py  elements.py  recovery_password_page.py  registration_page.py
tests/: test_autorization.py  test_form_elements.py  test_registration_check_email.py  test_registration_check_last_name.py  test_registration_check_name.py  test_registration_check_password.py  test_registration_check_phone_number.py
