[tool.poetry]
name = "33-1-4"
version = "0.1.0"
description = ""
authors = ["ChrVktr <chrvk@bk.ru>"]
readme = "README.md"
packages = [{include = "33"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
selenium = "^4.17.2"
termcolor = "^2.4.0"
allure-python-commons = "^2.13.2"
pytest-selenium = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
